# myplugin

./: README.md  Vagrantfile  setup.cfg
archive/: clone_repo.md  install_git.md  install_vscode.md  open_vscode_first_time.md  script_to_silent_install_vscode_ansible_python_git.md
docs/: Entry 1.md  Entry 2.md  Entry 3.md  Entry 4.md  Entry 5.md  Entry 6.md  Entry 7.md  Entry 8.md
src/myplugin/: plugin_runner.py
src/myplugin/data/: failure.csv  success.csv
