[metadata]
name = myplugin
version = 0.0.1
author = Newbie B. Engineer
author_email = newbie.b.engineer@github.com
description = My First Plugin
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Joeprobruh/myplugin.git
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
package_dir =
  = src
packages = myplugin
python_requires = >=3.9
install_requires =
    argparse
[options.package_data]
myplugin = data/*
[options.entry_points]
console_scripts =
    myplugin = myplugin.plugin_runner:main